--- a/main.css
+++ b/main.css
@@ -42,11 +42,33 @@
     -o-padding-end: 0px;
 }
 
-.container {}
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
 
-.about {}
+.container {
+    /*    background: url('river.jpg');*/
+    background: url(river.jpg) no-repeat 50%;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 230px 0;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+    position: relative;
+}
 
-.projects {}
+.about {
+    padding: 110px 0;
+    background:
+}
+
+.projects {
+    padding: 80px 0;
+    background: ;
+}
 
 .skills {}
 
