--- a/main.css
+++ b/main.css
@@ -55,6 +55,36 @@ body {
     height: auto!important;
     padding-bottom: 0;
     overflow: visible!important;
+    margin: 0px 0px 30px 0px;
+    padding: 5px 0px 0px 0px;
+    width: 100%;
+    border-color: #599a68;
+    background: #874e4c;
+    text-align: center;
+}
+
+.navigation ul {
+    list-style: none;
+}
+
+.navigation li {
+    display: inline-block;
+    padding: 3px 10px;
+}
+
+.navigation a {
+    font-weight: 800;
+    color: #b37c57;
+}
+
+.navigation a,
+.navigation a:visited {
+    color: #fff;
+}
+
+.navigation a.selected,
+.navigation a:hover {
+    color: #b37c57;
 }
 
 .container {
@@ -87,4 +117,21 @@ body {
 
 .footer {
     padding: 25px 0;
+    color: #bbc;
+    font-size: 0.75em;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 168px;
+}
+
+.footer #logo {
+    text-align: center;
+    margin: 0;
+}
+
+.footer .social-icon {
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
 }
