added the projects section, images properties

--- a/main.css
+++ b/main.css
@@ -107,6 +107,16 @@ body {
     background: ;
 }
 
+.projects .first-image,
+.projects .second-image {
+    border-radius: 5%;
+    max-width: 100%;
+}
+
+.projects .second-image {
+    height: 296px;
+}
+
 .skills {
     padding: 80px 0;
 }
