--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ header {
     height: auto;
     padding-bottom: 0;
     overflow: visible;
+    transition: all 0.2s ease-out 0s;
     margin: 0px;
     padding: 5px;
     width: 100%;
@@ -120,7 +121,7 @@ header .navigation a:hover {
     background: url(river.jpg) no-repeat 50%;
     background-size: cover;
     background-attachment: fixed;
-    padding: 230px 0;
+    padding: 275px 0;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     position: relative;
     margin-top: 50px;
@@ -132,9 +133,10 @@ header .navigation a:hover {
 }
 
 .about {
-    padding: 60px 0;
+    padding: 190px 0;
     width: 40%;
     margin: 0 auto;
+    font: 17px monospace;
 }
 
 .about p {
@@ -175,12 +177,11 @@ header .navigation a:hover {
 }
 
 .skills {
-    padding: 266px 0px 263px 90px;
+    padding: 40px 0px 0px 90px;
     margin: 0 auto;
     width: 40%;
     text-align: center;
-    /*    margin-bottom: 97px;
-    */
+    margin-bottom: 97px;
 }
 
 .skills ul {
@@ -252,6 +253,7 @@ header .navigation a:hover {
         padding: 0px;
     }
     .skills {
+        padding: 0px;
         width: 90%;
     }
 }
