--- a/main.css
+++ b/main.css
@@ -141,14 +141,20 @@ header .navigation a:hover {
 }
 
 .about {
-    padding: 190px 0;
+    padding: 90px 0px 0px 20px;
     width: 40%;
     margin: 0 auto;
-    font: 17px monospace;
 }
 
 .about p {
     margin-bottom: 1rem;
+}
+
+.about img {
+    width: 355px;
+    height: 285px;
+    border-radius: 20%;
+    margin: 15px 15px;
 }
 
 .projects {
@@ -188,7 +194,7 @@ header .navigation a:hover {
     padding: 40px 0px 0px 90px;
     margin: 0 auto;
     width: 40%;
-    text-align: center;
+    /*    text-align: center;*/
     margin-bottom: 97px;
 }
 
@@ -201,10 +207,16 @@ header .navigation a:hover {
     margin: 0;
     padding: 20px 0 20px 84px;
     list-style: none;
-    background-image: url("check-mark.png");
-    background-repeat: no-repeat;
+background-image: url("check-mark.png");
+background-repeat: no-repeat;
     background-position: left center;
     background-size: 40px;
+}
+
+.skills img {
+    width: 84px;
+    height: 50px;
+    margin-left: 178px;
 }
 
 .contact {
@@ -242,8 +254,8 @@ header .navigation a:hover {
 }
 
 .contact .social-icon {
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
     margin: 18px 9px -28px 9px;
 }
 
