--- a/main.css
+++ b/main.css
@@ -143,7 +143,7 @@ header .navigation a:hover {
 .about {
     padding: 90px 0px 0px 20px;
     width: 40%;
-    margin: 0 auto;
+    margin: 0px auto;
 }
 
 .about p {
@@ -207,8 +207,8 @@ header .navigation a:hover {
     margin: 0;
     padding: 20px 0 20px 84px;
     list-style: none;
-background-image: url("check-mark.png");
-background-repeat: no-repeat;
+    background-image: url("check-mark.png");
+    background-repeat: no-repeat;
     background-position: left center;
     background-size: 40px;
 }
