--- a/main.css
+++ b/main.css
@@ -296,6 +296,7 @@ header .navigation a:hover {
     }
     .projects {
         padding: 0px;
+        margin-top: 40px;
     }
     .container {
         background-attachment: inherit;
