changed the padding for the about me section

--- a/main.css
+++ b/main.css
@@ -308,6 +308,7 @@ header .navigation a:hover {
     }
     .about {
         width: 83%;
+        padding: 90px 0px 541px 0px;
     }
     .about p {
         margin-bottom: 0rem;
