made changes to media queries, made changes for better design

--- a/main.css
+++ b/main.css
@@ -336,8 +336,8 @@ h2 {
 /*reposnsive */
 
 @media only screen 
-and (min-device-width : 305px) 
-and (max-device-width : 895px)  {
+/*and (min-device-width : 305px) */
+and (max-device-width : 1030px)  {
     .projects {
         padding: 26px;
         margin-top: 50px;
@@ -372,7 +372,7 @@ and (max-device-width : 895px)  {
     background-position: left center;
     background-size: 40px;
     text-align: left;
-    padding: 0px 4px 9px 228px;
+    padding: 0px 4px 9px 234px;
     margin: -49px 8px 8px -59px 
     }
     .skills .mid-content {
@@ -383,5 +383,99 @@ and (max-device-width : 895px)  {
     }
     .skills img {
     margin: 36px 430px -38px 7px;
+    }
+}
+
+
+
+
+@media only screen 
+and (max-device-width : 420px)  {
+    
+    header h1{
+    width: 113%;
+    /*padding-left: 10px;*/
+    font-size: 12px;
+    }
+    header .navigation {
+    width: 103%;
+    margin-top: 2px;
+    font-size: 9px;
+    padding-left: 0px;
+    }
+    .container{
+        background-position: inherit;
+    }
+    .container h2{
+        font-size: 21px;
+    }
+    .about{
+        padding: 19px 30px 484px 1px;
+    }
+    .about .about-me{
+    padding: 7px 114px 44px 2px;
+    font-size: 8px;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 322px;
+    }
+    .about img {
+width: 96%;
+/*height: 115px;*/
+/*margin: -219px 59px 105px 212px;*/
+    }
+    .projects {
+        padding: 26px;
+        margin-top: 50px;
+    }
+    .projects .first-image,
+    .projects .sec-image {
+        height: 190px;
+        padding: 0px;
+    }
+    .about {
+    padding: 33px 0px 288px 0px
+    }
+    .about p {
+        margin-bottom: 0rem;
+    }
+    .about .about-me {
+        /*margin-bottom: 0rem;*/
+        padding: 5px 165px 26px 3px
+    }
+    .about img{
+width: 65%;
+height: 109px;
+margin: -310px 105px 225px 57px;
+padding: 1px 5px 13px 11px;
+border-radius: 18px;
+    }
+    .projects{
+        font-size: 9px;
+    }
+    .projects ul{
+        width: 99%;
+    }
+.skills{
+    width: 100%;
+    padding: 11px 17px 0px 0px    
+}
+    .skills li {
+       padding: 0px 0px 0px 161px;
+    margin: -47px 6px 14px -65px;
+    width: 384px;
+    }
+    .skills .mid-content {
+        margin: 15px 34px 58px 0px;
+    }
+    .skills .mid-skills-two {
+        float: none;
+    }
+    .skills img {
+    margin: 36px 430px -38px 7px;
+    }
+    .contact{
+        padding: 36px;
     }
 }
