fixed media queries

--- a/main.css
+++ b/main.css
@@ -219,17 +219,12 @@ h2 {
 .skills {
     padding: 60px 120px 10px 147px;
     margin-bottom: 97px;
+      text-align: left;
+    list-style: none;
     /*display: table;*/
     /*table-layout: fixed;*/
     width: 91%;
     text-align: center;
-    /*padding-right: 15px;*/
-    /*padding-left: 15px;*/
-    /*margin-right: auto;*/
-    /*margin-left: auto;*/
-    /*content: "";*/
-    /*margin-right: 15px;*/
-    /*margin-left: 15px;*/
     padding-right: 17px;
     padding-left: 23px;
     margin-right: auto;
@@ -237,19 +232,8 @@ h2 {
     
 }
 
-.skills ul {
-    text-align: left;
-    list-style: none;
-}
-
-.skills .inner-content {
-    /*margin: 0;*/
-    /*padding: 20px 0px 20px 85px;*/
-    /*list-style: none;*/
-    /*background-repeat: no-repeat;*/
-    /*background-position: left center;*/
-    /*background-size: 40px;*/
-    
+.skills .inner-content 
+{
     margin: 0;
     padding: 20px 20px;
     list-style: none;
@@ -263,12 +247,8 @@ h2 {
 }
 
 .skills img {
-    /*width: 84px;*/
-    /*height: 50px;*/
-    /*margin-left: 130px;*/
    width: 84px;
    height: 84px;
-   /* margin-left: 130px; */
    margin: auto;
    text-align: center;
    /*margin-top: 20px;*/
@@ -333,11 +313,9 @@ h2 {
     height: 40px;
     margin: 18px 9px -28px 9px;
 }
-/*reposnsive */
 
-@media only screen 
-/*and (min-device-width : 305px) */
-and (max-device-width : 1030px)  {
+/*reposnsive */
+@media only screen and (max-device-width : 1024px)  {
     .projects {
         padding: 26px;
         margin-top: 50px;
@@ -348,7 +326,7 @@ and (max-device-width : 1030px)  {
         padding: 0px;
     }
     .about {
-    padding: 90px 0px 510px 0px;
+        padding: 90px 0px 510px 0px;
     }
     .about p {
         margin-bottom: 0rem;
@@ -360,20 +338,20 @@ and (max-device-width : 1030px)  {
         width: 300px;
         height: 300px;
         margin: 0px 90px;
-}
-.skills{
-    width: 70%;
-    padding: 55px 17px 0px 0px    
-}
+    }
+    .skills{
+        width: 70%;
+        padding: 51px 40px 0px 0px    
+    }
     .skills .inner-content{
-    background-position: center;
-    list-style: none;
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-size: 40px;
-    text-align: left;
-    padding: 0px 4px 9px 234px;
-    margin: -49px 8px 8px -59px 
+        background-position: center;
+        list-style: none;
+        background-repeat: no-repeat;
+        background-position: left center;
+        background-size: 40px;
+        text-align: left;
+        padding: 0px 4px 9px 234px;
+        margin: -49px 8px 8px -59px 
     }
     .skills .mid-content {
         margin: 15px 5px 58px 0px;
@@ -382,48 +360,42 @@ and (max-device-width : 1030px)  {
         float: none;
     }
     .skills img {
-    margin: 36px 430px -38px 7px;
+        margin: 36px 430px -38px 7px;
     }
 }
 
 
 
-
-@media only screen 
-and (max-device-width : 420px)  {
-    
+@media only screen and (max-device-width: 768px) {
     header h1{
-    width: 113%;
-    /*padding-left: 10px;*/
-    font-size: 12px;
+        width: 113%;
+        font-size: 20px;
+        padding-top: 5px;
     }
     header .navigation {
-    width: 103%;
-    margin-top: 2px;
-    font-size: 9px;
-    padding-left: 0px;
+        width: 99%;
+        margin-top: 2px;
+        font-size: 9px;
+        padding-left: 0px;
     }
-    .container{
+  .container{
         background-position: inherit;
     }
     .container h2{
-        font-size: 21px;
-    }
-    .about{
-        padding: 19px 30px 484px 1px;
+        font-size: 37px;
     }
     .about .about-me{
-    padding: 7px 114px 44px 2px;
-    font-size: 8px;
-    height: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 322px;
+        padding: 7px 114px 44px 2px;
+        font-size: 8px;
+        height: 400px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 322px;
     }
     .about img {
-width: 96%;
-/*height: 115px;*/
-/*margin: -219px 59px 105px 212px;*/
+    width: 52%;
+    height: 183px;
+    margin: 47px 5px 25px 2px;
     }
     .projects {
         padding: 26px;
@@ -431,25 +403,33 @@ width: 96%;
     }
     .projects .first-image,
     .projects .sec-image {
-        height: 190px;
+        height: 280px;
         padding: 0px;
     }
+    .projects h2{
+        font-size: 19px;
+    }
+    .projects img{
+       
+    }
     .about {
-    padding: 33px 0px 288px 0px
+        padding: 33px 0px 600px 0px;
     }
     .about p {
         margin-bottom: 0rem;
+        font-size: 19px;
+        width: 470px;
     }
     .about .about-me {
         /*margin-bottom: 0rem;*/
         padding: 5px 165px 26px 3px
     }
     .about img{
-width: 65%;
-height: 109px;
-margin: -310px 105px 225px 57px;
-padding: 1px 5px 13px 11px;
-border-radius: 18px;
+        width: 54%;
+        height: 231px;
+        margin: 172px 36px 0px 101px;
+        padding: 1px 5px 13px 11px;
+        border-radius: 18px;
     }
     .projects{
         font-size: 9px;
@@ -457,28 +437,150 @@ border-radius: 18px;
     .projects ul{
         width: 99%;
     }
-.skills{
-    width: 100%;
-    padding: 34px 17px 0px 0px;    
-}
-.my-skills{
-    padding-top: 40px;
-}
+    .projects p{
+        font-size: 19px;
+    }
+    .projects h3{
+        font-size: 14px;
+    }
+    .skills{
+        width: 62%;
+        padding: 30px 74px 6px 39px;   
+    }
+    .skills h2{
+            font-size: 25px;
+    }
+    .my-skills{
+        padding-top: 40px;
+    }
     .skills .inner-content {
-       padding: 0px 0px 0px 161px;
-    margin: -47px 6px 14px -65px;
-    width: 384px;
+        padding: 7px 0px 0px 1px;
+        margin: 0px 560px 2px 0px;
+        width: 710px;
+    }
+    .skills .inner-content p{
+        font-size: 19px;
     }
     .skills .mid-content {
-        margin: 15px 5px 58px 0px;
+        margin: 1px 5px 8px 0px;
     }
     .skills .mid-skills-two {
         float: none;
     }
     .skills img {
-    margin: 36px 430px -38px 7px;
+        margin: 83px 481px -87px -131px
     }
     .contact{
         padding: 36px;
+    }
+    .contact p{
+        font-size: 12px;
+    }
+}
+
+
+@media only screen and (max-device-width: 420px) {
+    header h1{
+        width: 113%;
+        font-size: 20px;
+        padding-top: 5px;
+    }
+    header .navigation {
+        width: 99%;
+        margin-top: 2px;
+        font-size: 9px;
+        padding-left: 0px;
+    }
+    .container{
+        background-position: inherit;
+    }
+    .container h2{
+        font-size: 21px;
+    }
+    .about .about-me{
+        padding: 7px 114px 44px 2px;
+        font-size: 8px;
+        height: 400px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 322px;
+    }
+    .about img {
+    width: 52%;
+    height: 183px;
+    margin: 47px 5px 25px 2px;
+    }
+    .projects {
+        padding: 26px;
+        margin-top: 50px;
+    }
+    .projects .first-image,
+    .projects .sec-image {
+        height: 280px;
+        padding: 0px;
+    }
+    .projects img{
+       
+    }
+    .about {
+        padding: 33px 0px 600px 0px;
+    }
+    .about p {
+        margin-bottom: 0rem;
+        font-size: 19px;
+        width: 470px;
+    }
+    .about .about-me {
+        /*margin-bottom: 0rem;*/
+        padding: 5px 165px 26px 3px
+    }
+    .about img{
+        width: 54%;
+        height: 231px;
+        margin: 172px 36px 0px 101px;
+        padding: 1px 5px 13px 11px;
+        border-radius: 18px;
+    }
+    .projects{
+        font-size: 9px;
+    }
+    .projects ul{
+        width: 99%;
+    }
+    .projects p{
+        font-size: 19px;
+    }
+    .skills{
+        width: 62%;
+        padding: 30px 74px 6px 39px;   
+    }
+    .skills h2{
+            font-size: 42px;
+    }
+    .my-skills{
+        padding-top: 40px;
+    }
+    .skills .inner-content {
+        padding: 31px 0px 0px 1px;
+        margin: 0px 560px 2px 0px;
+        width: 710px;
+    }
+    .skills .inner-content p{
+        font-size: 19px;
+    }
+    .skills .mid-content {
+        margin: 1px 5px 8px 0px;
+    }
+    .skills .mid-skills-two {
+        float: none;
+    }
+    .skills img {
+        margin: 83px 481px -112px -131px
+    }
+    .contact{
+        padding: 36px;
+    }
+    .contact p{
+        font-size: 12px;
     }
 }
