--- a/main.css
+++ b/main.css
@@ -341,7 +341,7 @@ h2 {
     }
     .skills{
         width: 70%;
-        padding: 51px 40px 0px 0px    
+        /*padding: 51px 40px 0px 0px;    */
     }
     .skills .inner-content{
         background-position: center;
