--- a/main.css
+++ b/main.css
@@ -336,3 +336,59 @@ color: white;
     height: 40px;
     margin: 18px 9px -28px 9px;
 }
+
+@media only screen and (max-device-width: 768px) {
+.about{
+    Width: 82%;
+}
+.about img
+{
+    width: 322px;
+    height: 264px;
+    border-radius: 11%;
+    margin: -2px 35px;
+}
+.skills{
+    width: 80%;
+}
+.skills img{
+    margin: 46px 289px 0px 7px;
+}
+}
+
+
+@media only screen and (max-device-width: 420px) {
+
+header h1{
+    padding-left: 18px;
+    font-size: 16px;
+}
+
+header .navigation{
+    font-size: 12px;
+    width: 99%;
+    text-align: right;
+}
+.container{
+    padding: 160px 0;
+}
+.container h1{
+    font-size: 31px;
+}
+
+.container h2{
+    font-size: 25px;
+}
+
+.about{
+    padding: 120px 0px 723px 26px;
+}
+
+.about img
+{
+    width: 98px;
+    height: 129px;
+    border-radius: 11%;
+    margin: 213px 19px;
+}
+}
