--- a/main.css
+++ b/main.css
@@ -348,13 +348,13 @@ color: white;
 
 @media only screen and (max-device-width : 1680px)  {
 .skills{
-    width: 67%;
+    width: 60%;
 }
 }
 
 @media only screen and (max-device-width : 1440px)  {
 .skills{
-    width: 80%;
+    width: 76%;
 }
 }
 
@@ -363,6 +363,16 @@ color: white;
 .skills{
     width: 83%;
 }
+}
+@media only screen and (max-device-width: 1280px) {
+.skills {
+    width: 88%;
+}
+}
+@media only screen and (max-device-width: 1024px){
+.skills {
+    width: 112%;
+} 
 }
 @media only screen and (max-device-width: 768px) {
 .about{
